# wordninja

./: LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py  test.py  test_lang.txt.bz2  wordninja.py
wordninja/: wordninja_words.txt.bz2
