[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61.2", "setuptools_scm[toml]>=3.4.3", "wheel"]

[project]
name = "wordninja"
description = "Probabilistically split concatenated words using NLP based on English Wikipedia uni-gram frequencies."
readme = "README.md"
license = {text="MIT"}
authors = [{name = "Derek Anderson", email = "public@kered.org"}]
dynamic = ["version"]
urls = {Homepage = "https://github.com/keredson/wordninja"}

[tool.setuptools]
py-modules = ["wordninja"]
packages = ["wordninja"]
include-package-data = true
package-dir = {wordninja = "wordninja"}

[tool.setuptools.package-data]
wordninja = ["wordninja_words.txt.gz"]

[tool.setuptools_scm]
