[metadata]
name = wordninja
author = Derek Anderson
author_email = public@kered.org
description = Probabilistically split concatenated words using NLP based on English Wikipedia uni-gram frequencies.
url = https://github.com/keredson/wordninja

[options]
py_modules = wordninja
packages = wordninja
include_package_data = True
package_dir =
  wordninja = wordninja

[options.package_data]
wordninja = wordninja_words.txt.gz
